2008-05-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailFolderActions.m ([UIxMailFolderActions
	-deleteFolderAction]): select the INBOX folder before removing the
	target folder, so that Courier does not complain about the current
	mailbox being in use.

2008-05-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m ([SOGoGCSFolder
	-subscribe:reallyDoinTheNameOf:delegatedUserfromMailInvitation:isMailInvitationinContext:localContext]):
	published method.
	([-folderReference]): no longer distingish between the user owned
	and the subscribed folders.

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder -compare:otherFolder]):
	no longer use the "_" in the folder's nameInContainer.

	* UI/Common/UIxFolderActions.m ([UIxFolderActions -subscribeAction])
	([UIxFolderActions -unsubscribeAction]): use the client object's
	method for un-/subscribing.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject
	-pathArrayToSOGoObject]): removed useless method.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -davCalendarQuery:queryContext]): added
	partial support for the "text-match" caldav directive.

2008-05-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactFoldersView.m ([-newAction]): removed
	useless method.

2008-05-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject
	-davAclQuery:queryContext]): parse the names only of element nodes.

	* UI/Common/UIxFolderActions.m ([UIxFolderActions -activateFolderAction])
	([UIxFolderActions -deactivateFolderAction]): reversed the logic
	and remove or add the folder name from/into the 'InactiveFolders'
	settings key.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -create]): no longer write the folder name
	in the 'ActiveFolders' settings key.
	([-isActive]): returns whether the folder is NOT listed in the
	'InactiveFolders' settings key.

2008-05-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
